Use Docker Compose to run tests. Update README

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -12,4 +12,5 @@ steps:
 
   - label: ":test_tube: Run tests"
     plugins:
-      - plugin-tester#v1.2.0:
+      - docker-compose#v5.10.0:
+          run: tests
