--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "yaml.schemas": {
     "https://raw.githubusercontent.com/buildkite-plugins/buildkite-plugin-linter/refs/heads/master/lib/plugin-yaml-schema.yml": "./plugin.yml",
     "https://raw.githubusercontent.com/buildkite/pipeline-schema/main/schema.json": "./.buildkite/pipeline.yml"
+  },
+  "files.associations": {
+    "*.bats": "shellscript"
   }
 }
